# romst

./: .gitignore  Cargo.toml  README.md  forcecrc32.py  generatefile.sh
db/: nintendo.rst
src/: lib.rs  macros.rs  main.rs
src/dat/: dat_reader.rs  data_writer.rs  mod.rs
src/data/: dat.rs  dat_reader.rs  mod.rs
src/data/importer/: mod.rs
src/data/models/: dat_info.rs  disk.rs  file.rs  game.rs  mod.rs  report.rs  set.rs
src/data/reader/: mod.rs  sqlite.rs
src/data/rebuilder/: mod.rs
src/data/reporter/: file_report.rs  mod.rs  report.rs  scan_report.rs  set_report.rs
src/data/writer/: memory.rs  mod.rs  sqlite.rs  sysout.rs
src/error/: mod.rs
src/filesystem/: md5.rs  mod.rs  sha1.rs
src/reporter/: mod.rs
src/sysout/: mod.rs
testdata/: .test.dat.swp  test.rst
testdata/split/game5/: gm5-001.chd
testdata/wrong/: info.txt
tests/: reporter_test.rs
