[package]
name = "romst"
version = "0.1.0"
authors = ["Nico Hormazabal <mail@nico.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
indicatif = "0.15.0"
console = "0.13.0"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "1.2"
clap = "3.0.0-beta.2"
quick-xml = "0.20.0"
rusqlite = { version = "0.24.1", features = [ "bundled" ] }
zip = "0.5"
sha-1 = "0.9"
md-5 = "0.9"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"