[package]
name = "romst"
version = "0.1.0"
authors = ["Nico Hormazabal <mail@nico.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
crossbeam = "0.8.0"
log = "0.4.14"
env_logger = "0.8.3"
indicatif = "0.15.0"
console = "0.14.0"
anyhow = "1.0.38"
thiserror = "1.0.23"
bitflags = "1.2.1"
clap = "3.0.0-beta.2"
quick-xml = "0.21.0"
rusqlite = { version = "0.24.2", features = [ "bundled" ] }
zip = "0.5.10"
sha-1 = "0.9.3"
md-5 = "0.9.1"
rayon = "1.5.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_json = "1.0.62"
